--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
 <head>
 	<title>This Is Apparently My Page</title>
+
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 	
-	<h2>Ta Da!</h2>
+	<h1>Official Site of SRBH</h1>
+	<br>
 
+	<ul>
+		<li>Here is a list</li>
+		<li>Just a list of words</li>
+		<li>No point to the list</li>
+	</ul>
 
 </body>
 </html>
