--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<li>No point to the list</li>
 	</ul>
 
-	<a href="../../desktop/Erging4Days/index.html">Wallaby Page</a>
+	<a href="http://Sberry5.github./Erging4Days">Wallaby Page</a>
 
 </body>
 </html>
